k3s/rest-api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-api-deployment
  namespace: rest-api
  labels:
    app: rest-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rest-api
  template:
    metadata:
      labels:
        app: rest-api
    spec:
      containers:
      - name: rest-api
        image: mtr.external.otc.telekomcloud.com/llxp/chain-factory-api:1.0.58
        ports:
        - containerPort: 8000
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          runAsNonRoot: true
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
