k3s/rest-api/headless-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rest-api-headless
  namespace: rest-api
spec:
  # clusterIP: None
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  selector:
    app: rest-api
